# bank-account

./: README.md  main.py  planning.md  pyproject.toml
backend/: main.py  pyproject.toml  requirements.txt  users.db  z_accounts.csv  z_clients.csv  z_transactions.csv
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py
backend/models/: user.py
backend/services/: password.py
frontend/: index.html  package-lock.json
frontend/src/: API.jsx  App.css  App.jsx  main.jsx
frontend/src/components/: accountlist.jsx  accountstatus.jsx  dashboard.jsx  dataanalysis.jsx  homepage.jsx  layout.jsx  operateaccount.jsx  operations.jsx  transaction.jsx  viewaccount.jsx
utils/: commons.py  parser.py
